Fix Loading Component in Login (z-index)

--- a/src/views/auth/auth.css
+++ b/src/views/auth/auth.css
@@ -35,7 +35,7 @@
   @apply flex mt-4 py-2 px-8 
     text-white tracking-wider text-xl font-bold 
     bg-slate-500 rounded-lg cursor-not-allowed
-    transition-all duration-300 ease-in-out shadow
+    transition-all duration-300 ease-in-out shadow;
 }
 
 .auth_btn {
@@ -65,34 +65,32 @@
   @apply p-1 rounded-2xl bg-devPink-600 relative z-0 overflow-hidden;
 }
 
-.auth_bg_anim::before{
-    content: '';
-    position: absolute;
-    z-index: -2;
-    left: -50%;
-    top: -50%;
-    width: 200%;
-    height: 200%;
-    background-color: var(--devPink-600);
-    background-repeat: no-repeat;
-    background-size: 50% 50%, 50% 50%;
-    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
-    background-image: 
-            linear-gradient(var(--devyellow-400), var(--devyellow-400)), 
-            linear-gradient(var(--devpink-600), var(--devpink-600)), 
-            linear-gradient( var(--devblue-600), var(--devblue-600)), 
-            linear-gradient( var(--devpink-600),  var(--devpink-600));
-    animation: solid-rotate 25s linear infinite;
-	}
+.auth_bg_anim::before {
+  content: '';
+  position: absolute;
+  z-index: -2;
+  left: -50%;
+  top: -50%;
+  width: 200%;
+  height: 200%;
+  background-color: var(--devPink-600);
+  background-repeat: no-repeat;
+  background-size: 50% 50%, 50% 50%;
+  background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+  background-image: linear-gradient(var(--devyellow-400), var(--devyellow-400)),
+    linear-gradient(var(--devpink-600), var(--devpink-600)),
+    linear-gradient(var(--devblue-600), var(--devblue-600)),
+    linear-gradient(var(--devpink-600), var(--devpink-600));
+  animation: solid-rotate 25s linear infinite;
+}
 
-  .auth_bg_anim_loading::before{
-    animation-duration: 12s;
-  }
+.auth_bg_anim_loading::before {
+  animation-duration: 12s;
+}
 
-  .auth_backdrop_loading{
-    @apply flex-col items-center justify-center
+.auth_backdrop_loading {
+  @apply flex-col items-center justify-center
     font-primary p-6 rounded-lg w-full h-full 
     shadow-md bg-slate-700/40
-    absolute top-0 left-0 backdrop-blur-[1px]
-  }
-	
+    absolute top-0 left-0 backdrop-blur-[1px] z-50;
+}
